--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.14.3",
-    "next": "15.4.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.284.0",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.69.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@vercel/og": "^0.7.2",
-    "@vitejs/plugin-react": "^4.6.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.1",
-    "jsdom": "^26.1.0",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "typescript": "^5",
-    "vitest": "^3.2.4"
+    "vitest": "^0.34.0"
   }
 }
