--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.0"
+    "sass": "^1.69.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,10 +28,5 @@
     "eslint-config-next": "14.0.4",
     "typescript": "^5",
     "vitest": "^0.34.0"
-  }
-}
-{
-  "dependencies": {
-    "zod": "^3.22.4"  
   }
 }
