--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.0",
     "@lottiefiles/dotlottie-react": "^0.14.3",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.284.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.0",
     "sass": "^1.69.0",
     "zod": "^3.22.4"
   },
