--- a/package.json
+++ b/package.json
@@ -10,25 +10,23 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.0",
     "@lottiefiles/dotlottie-react": "^0.14.3",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.284.0",
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.0",
-    "sass": "^1.69.0",
-    "zod": "^3.22.4"
+    "next": "15.4.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@vercel/og": "^0.7.2",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.4.1",
+    "jsdom": "^26.1.0",
     "typescript": "^5",
-    "vitest": "^0.34.0"
+    "vitest": "^3.2.4"
   }
 }
