--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@lottiefiles/dotlottie-react": "^0.14.3",
+    "framer-motion": "^12.23.6",
+    "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.60.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
